k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deployment
spec:
  #customize how this deployment behaves
  replicas: 1
  #number of the pods
  selector:
    #deployment going to use to find the set ot pods that is suyposed to control
    matchLabels:
      component: worker
      #component could be any name
  template:
    metadata:
      labels:
        component: worker
        #must match the spec component
    spec:
      #specify the behavior of the pods that will be created
      containers:
        #in this case we have only one container
        - name: worker
          image: ivanb1/multi-worker
