k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
#object with type service
metadata: 
  name: redis-cluster-ip-service
spec:
  #configure the way that service behaves 
  type: ClusterIP
  selector:
    #service know what set of pods to access
    component: redis
    #name comes from the lable from client deploument yaml
  ports:
    - port: 6379
      targetPort: 6379
