k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
#object with type service
metadata: 
  name: server-cluster-ip-service
spec:
  #configure the way that service behaves 
  type: ClusterIP
  selector:
    #service know what set of pods to access
    component: server
    #name comes from the lable from client deploument yaml
  ports:
    - port: 5000
      targetPort: 5000
